--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,2 @@
-name: Waka Readme
-
-on:
-  schedule:
-    # Runs at 12am IST
-    - cron: '0 0 * * *'
-  workflow_dispatch:
-jobs:
-  update-readme:
-    name: Update Readme with Metrics
-    runs-on: ubuntu-latest
-    steps:
-      - name: Profile Readme Development Stats
-        uses: Eugeniocode/waka-readme-stats@master
-        with:
-          WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          SHOW_OS: "False"
-          SHOW_PROJECTS: "False"
+- name: Profile Readme Development Stats
+  uses: anmol098/waka-readme-stats@V3
