--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,8 @@ on:
   schedule:
     # Runs at 12am IST
     - cron: '30 18 * * *'
-
+  workflow_dispatch:
+  
 jobs:
   update-readme:
     name: Update Readme with Metrics
