--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,4 @@ jobs:
           SHOW_TIMEZONE: "False"
           SHOW_SHORT_INFO: "False"
           SHOW_LOC_CHART: "False"
+          LOCALE: zh_CN
